[package]
name = "cloneable-any"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Cloneable Any"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/any-rs"
homepage = "https://github.com/bk-rs/any-rs"
documentation = "https://docs.rs/cloneable-any"
keywords = []
categories = []
readme = "README.md"

[dependencies]
