[package]
name = "cloneable-any"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Cloneable Any"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/any-rs"
homepage = "https://github.com/bk-rs/any-rs"
documentation = "https://docs.rs/cloneable-any"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["std"]
std = ["downcast-rs/std"]

[dependencies]
dyn-clone = { version = "1.0", default-features = false }
downcast-rs = { version = "1.2", default-features = false }
